# python-woc

./: .gitignore  .pre-commit-config.yaml  README.md  filescan.py  oscar.pyx  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-wheel.yml  docs.yaml  release.yml  test.yml
docs/: DataFormat.md  contributing.md  guide.ipynb  guide.md  guide_remote.ipynb  guide_remote.md  maintaining.md  quickstart.md  tutorial.ipynb  tutorial.md
tests/: test_cli.py  test_local.py  test_objects.py  test_profile.json  test_remote.py  test_tch.py
tests/fixtures/: a2cFullR.1.tch  a2fFullR.1.tch  b2cFullR.1.tch  b2cFullR.31.tch.large.3f2eca18f1bc0f3117748e2cea9251e5182db2f7  b2fFullR.1.tch  b2faFullU.1.tch  b2tacFullU.1.tch  c2bFullR.0.tch  c2datFullU.0.tch  c2fFullR.0.tch  c2pFullU.0.tch  c2rFullR.0.tch  c2taFullR.0.tch  c2tagFullR.0.tch  commit_0.tch  commit_1.tch  create_fixtures.py  create_fixtures.py.bak  f2aFullR.1.tch  p2aFullR.1.tch  p2cFullR.1.tch  sha1.blob.tch  tag_0.tch  tree_0.tch  tree_1.tch
woc/: __init__.py  base.py  detect.py  get_values.py  local.pxd  local.pyi  local.pyx  objects.py  remote.py  show_content.py  tch.pxd  tch.pyi  tch.pyx  utils.py  verify.py  wocprofile.default.json
