[tool.poetry]
name = "python-woc"
version = "0.1.0"
description = "Python interface for World of Code"
authors = ["Runzhi He <rzhe@pku.edu.cn>", "Marat <marat@cmu.edu>"]
license = "GPL-3.0"
readme = "README.md"
packages = [
    { include = "woc" }
]
include = [
    { path = "woc/**/*.so", format = "wheel" },
    { path = "lib/*", format = "sdist" }
]

[tool.poetry.build]
script = "setup.py"
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.8"
python-lzf = "^0.2.4"
chardet = "^5.2.0"

[tool.poetry.group.dev.dependencies]
cython = "^0.29.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
coverage = {extras = ["toml"], version = "^7.5.3"}

[build-system]
requires = ["poetry-core", "Cython>=0.29.0,<1.0.0", "setuptools>=42"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.coverage.report]
show_missing = true
omit = [ "tests/*" ]

[tool.coverage.run]
plugins = [ "Cython.Coverage" ]